<resources>
    <string name="app_name">Cookie Clicker</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="blank_string">        </string>
    <string name="cookie0">Cookie</string>
    <string name="cookie1">Cookie 1</string>
    <string name="cookie2">Cookie 2</string>
    <string name="cookie3">Cookie 3</string>
    <string name="cookie4">Cookie 4</string>
    <string name="cookie5">Cookie 5</string>
    <string name="cookie6">Cookie 6</string>
    <string name="cookie7">Cookie 7</string>
    <string name="cookie8">Cookie 8</string>
    <string name="cookie9">Cookie 9</string>
    <string name="cookie10">Cookie 10</string>
    <string name="cookie11">Cookie 11</string>
    <string name="cookie1_price">15</string>
    <string name="cookie2_price">100</string>
    <string name="cookie3_price">500</string>
    <string name="cookie4_price">3000</string>
    <string name="cookie5_price">10000</string>
    <string name="cookie6_price">40000</string>
    <string name="cookie7_price">200000</string>
    <string name="cookie8_price">1667000</string>
    <string name="cookie9_price">123456700</string>
    <string name="cookie10_price">4000000000</string>
    <string name="cookie11_price">75000000000</string>
    <string name="title_activity_achievements">AchievementsActivity</string>
    <string name="PerfectCookie.png">Cookie</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="upgrades">Upgrades</string>

    <string name="title_section1">Buildings</string>
    <string name="title_section2">Upgrades</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>



</resources>
